# sand-simulation

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  Sand Simulation.sln  imgui.ini
Sand Simulation/: Sand Simulation.vcxproj  Sand Simulation.vcxproj.filters  imgui.ini
Sand Simulation/src/: Application.cpp  Application.h  Brush.cpp  Brush.h  Cell.cpp  Cell.h  CellInteractions.h  Chunk.cpp  Chunk.h  ChunkData.h  Core.h  Element.h  ElementType.h  EntryPoint.h  GameObject.cpp  GameObject.h  Grid.cpp  Grid.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  Log.h  Mesh.cpp  Mesh.h  MeshData.h  Particle.h  ParticleData.h  QuadTree.cpp  QuadTree.h  QuadTreeObject.cpp  QuadTreeObject.h  Renderer.cpp  Renderer.h  Shader.cpp  ThreadPool.cpp  ThreadPool.h  Time.cpp  Time.h  Utils.h  (+10 more)
libs/glad/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt
resources/shaders/: default_shader.glsl  default_shader1.glsl
src/: Application.cpp  Application.h  EntryPoint.cpp  SandSimulation.h  Time.cpp  Time.h  Window.cpp  Window.h  pch.h
src/Core/: GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/Events/: Event.h  EventManager.h
src/Game/: Cell.cpp  Cell.h  Chunk.cpp  Chunk.h  World.cpp  World.h
src/Rendering/: ArenaLinear.h  ArenaSlab.h  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderCommand.h  Renderer.cpp  Renderer.h  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  shader.h  (+2 more)
unity/: unity.cpp  unity_core.cpp  unity_rendering.cpp
(+79 files in other folders)
